--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                                 <p>
                                     Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição. Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor desconhecido pegou um modelo de impressão e embaralhou-o para fazer um livro de amostra de tipos.
                                 </p>
-                                <button class="btn btn-outline-dark d-block d-md-inline-block">
+                                <button class="btn btn-outline-dark d-block d-md-inline-block botao">
                                     contate-nos
                                 </button>
-                                <button class="btn btn-outline-dark d-block d-md-inline-block">
+                                <button class="btn btn-outline-dark d-block d-md-inline-block botao">
                                     Mais informações
                                 </button>
                             </div>
@@ -140,7 +140,7 @@
     </section>
     <!-- fim conteudo -->
     <!-- inicio rodape -->
-    <footer id="rodape">
+    <footer id="rodape" class="block">
         <div class="container">
             <div class="row py-4">
                 <div class="col-md-6">
