--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel = "preconnect" href = "https://fonts.gstatic.com">
     <link href = "https://fonts.googleapis.com/css2? family = Roboto + Condensado: wght @ 300; 700 & display = swap "rel =" stylesheet ">
     <!-- Font Awesome -->
