--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md nav-principal">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="/imagens/logo-principal.png" alt="logomarca" width="130" class="img-fluid">
+                    <img src="imagens/logo-principal.png" alt="logomarca" width="130" class="img-fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mb-2 mb-md-0 order-1 order-md-0">
-                        <img src="/imagens/img-msg.png" class="img-fluid">
+                        <img src="imagens/img-msg.png" class="img-fluid">
                     </div>
                     <div class="col-md-6 mb-4 mb-md-0 order-0 order-md-1">
                         <div class="conteudo">
@@ -147,7 +147,7 @@
                     <div class="row">
                         <div class="col-md-6 mb-5 mb-md-0 text-center text-md-start align-self-center">
                             <a href="#">
-                                <img src="/imagens/logo-principal.png" class="img-fluid" width="120">
+                                <img src="imagens/logo-principal.png" class="img-fluid" width="120">
                             </a>
                         </div>
                         <div class="col-md-3 mb-4 mb-md-0">
